feature(pagination_pkg): Обновил свагер.
