# docs/swagger.json
@@ -129,7 +129,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/schema.SwagBashPaginationPage"
+                            "$ref": "#/definitions/schema.BashPaginationPage"
                         }
                     },
                     "500": {
@@ -180,7 +180,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/schema.SwagBashLogPaginationPage"
+                            "$ref": "#/definitions/schema.BashLogPaginationPage"
                         }
                     },
                     "500": {
@@ -351,29 +351,7 @@
                 }
             }
         },
-        "schema.HTTPError": {
-            "type": "object",
-            "properties": {
-                "detail": {
-                    "type": "string"
-                },
-                "httpCode": {
-                    "type": "integer"
-                },
-                "serviceCode": {
-                    "type": "integer"
-                }
-            }
-        },
-        "schema.Message": {
-            "type": "object",
-            "properties": {
-                "message": {
-                    "type": "string"
-                }
-            }
-        },
-        "schema.SwagBashLogPaginationPage": {
+        "schema.BashLogPaginationPage": {
             "type": "object",
             "properties": {
                 "items": {
@@ -393,7 +371,7 @@
                 }
             }
         },
-        "schema.SwagBashPaginationPage": {
+        "schema.BashPaginationPage": {
             "type": "object",
             "properties": {
                 "items": {
@@ -410,6 +388,28 @@
                 },
                 "total": {
                     "type": "integer"
+                }
+            }
+        },
+        "schema.HTTPError": {
+            "type": "object",
+            "properties": {
+                "detail": {
+                    "type": "string"
+                },
+                "httpCode": {
+                    "type": "integer"
+                },
+                "serviceCode": {
+                    "type": "integer"
+                }
+            }
+        },
+        "schema.Message": {
+            "type": "object",
+            "properties": {
+                "message": {
+                    "type": "string"
                 }
             }
         }
