# internal/schema/swag.go
@@ -3,26 +3,14 @@ package schema
 import "pg-sh-scripts/internal/model"
 
 type (
-	PaginationParams struct {
-		Limit  int `json:"limit"`
-		Offset int `json:"offset"`
-	}
-
-	PaginationPage[T any] struct {
-		Items  []T `json:"items"`
-		Limit  int `json:"limit"`
-		Offset int `json:"offset"`
-		Total  int `json:"total"`
-	}
-
-	SwagBashPaginationPage struct {
+	BashPaginationPage struct {
 		Items  []model.Bash `json:"items"`
 		Limit  int          `json:"limit"`
 		Offset int          `json:"offset"`
 		Total  int          `json:"total"`
 	}
 
-	SwagBashLogPaginationPage struct {
+	BashLogPaginationPage struct {
 		Items  []model.BashLog `json:"items"`
 		Limit  int             `json:"limit"`
 		Offset int             `json:"offset"`
